--- a/Enjoy_Cafe2K24/Views/RegisterScreenModule/RegisterScreen.storyboard
+++ b/Enjoy_Cafe2K24/Views/RegisterScreenModule/RegisterScreen.storyboard
@@ -206,7 +206,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="rCm-0c-abT"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Register">
                                             <color key="titleColor" name="BtnTextColor"/>
@@ -283,6 +283,26 @@
             <point key="canvasLocation" x="132" y="-15"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="2vG-ov-QPJ">
+            <size key="intrinsicContentSize" width="62.333333333333336" height="17"/>
+        </designable>
+        <designable name="7Ap-U0-VBN">
+            <size key="intrinsicContentSize" width="67" height="34"/>
+        </designable>
+        <designable name="F5B-5i-v2a">
+            <size key="intrinsicContentSize" width="96.666666666666671" height="18.666666666666668"/>
+        </designable>
+        <designable name="LJr-73-0aQ">
+            <size key="intrinsicContentSize" width="38" height="18.666666666666668"/>
+        </designable>
+        <designable name="N2D-rT-sZS">
+            <size key="intrinsicContentSize" width="421" height="421"/>
+        </designable>
+        <designable name="VTE-D1-hoD">
+            <size key="intrinsicContentSize" width="117.66666666666667" height="17"/>
+        </designable>
+    </designables>
     <resources>
         <image name="Profile" width="32" height="32"/>
         <image name="arrow.backward" catalog="system" width="128" height="95"/>
