--- a/Enjoy_Cafe2K24/Views/RegisterScreenModule/RegisterScreen.storyboard
+++ b/Enjoy_Cafe2K24/Views/RegisterScreenModule/RegisterScreen.storyboard
@@ -252,7 +252,9 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="gMc-no-5ry" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="3ty-kk-rBd"/>
                             <constraint firstItem="gMc-no-5ry" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="T3B-EW-lCa"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gMc-no-5ry" secondAttribute="trailing" constant="20" id="aSO-d9-Q4J"/>
                             <constraint firstItem="gMc-no-5ry" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="cmA-86-uQD"/>
                             <constraint firstItem="QbP-Ra-y2e" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="eLj-lx-PPO"/>
                             <constraint firstItem="QbP-Ra-y2e" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="gll-Cu-XPF"/>
