--- a/Enjoy_Cafe2K24/Views/Modules/LoginScreenModule/LoginScreen.storyboard
+++ b/Enjoy_Cafe2K24/Views/Modules/LoginScreenModule/LoginScreen.storyboard
@@ -120,6 +120,7 @@
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="rightPadding">
                                                                         <real key="value" value="10"/>
                                                                     </userDefinedRuntimeAttribute>
+                                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="addVisible" value="YES"/>
                                                                 </userDefinedRuntimeAttributes>
                                                             </textField>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYW-ZH-Jd0">
